--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for fiicalculator on 2023-08-15T21:02:01-03:00
+# fly.toml app configuration file generated for fiicalculator on 2023-08-15T21:11:32-03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -10,6 +10,7 @@ kill_signal = "SIGTERM"
 [build]
 
 [env]
+  FLY_LAUNCH_MODE = "clone"
   PHX_HOST = "fiicalculator.fly.dev"
   PORT = "8080"
 
@@ -18,7 +19,7 @@ kill_signal = "SIGTERM"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ["app"]
   [http_service.concurrency]
     type = "connections"
